--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <ul>
     <li>📺 <strong>Clases:</strong> Grabaciones de los encuentros virtuales, organizadas por fecha.</li>
     <li>📚 <strong>Libros y artículos:</strong> Materiales de lectura que acompañan los módulos.</li>
-    <li>🎧 <strong>Audios:</strong> Meditaciones y propuestas de práctica personal.</li>
+    <li>🎧 <strong>Audios:</strong> Meditaciones y ejercicios de conciencia corporal en audio de Maria Paulina Rubio.</li>
   </ul>
 
 
