--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 	</div>
 	<br />
     <!-- Audio 2 -->
-   <div class="list-group-item" style="display: none;">
+   <div class="list-group-item">
 		<div class="audiotitulo">
 		  <strong>Atención plena 01</strong><br>
 		  <small>🎧 Voz: María Paulina Rubio</small>
