--- a/index.html
+++ b/index.html
@@ -169,7 +169,15 @@
         <small>📅 26 de junio 2025 – 🎓 German Doin</small>
       </button>
             <br />
-
+      <!-- Clase 5 -->
+      <button type="button" class="list-group-item list-group-item-action" 
+              data-bs-toggle="modal" 
+              data-bs-target="#videoModal" 
+              data-video="">
+        <strong>Clase 05:</strong> Desnudando el concepto de cuerpo<br>
+        <small>📅 14 de Agosto 2025 – 🎓 María Paulina Rubio</small>
+      </button>
+            <br />
     </div>
   </section>
 
@@ -216,6 +224,16 @@
       <strong>Infancia, la edad sagrada</strong><br>
       <small>📄 Evania Reichert – PDF (Descarga/Visualización)</small>
     </a><br />
+    <!-- Libro 4 -->
+    <a href="https://drive.google.com/file/d/1HJZgdZaNWAUE-s8RGgzgScEEQShMHtBw/view?usp=drive_link" 
+       target="_blank" 
+       class="list-group-item list-group-item-action">
+      <strong>Bibliografía comentada</strong><br>
+      <small>📄 María Paulina Rubio – PDF (Descarga/Visualización)</small>
+    </a><br />
+	
+	
+	
 
 
 
