--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <button type="button" class="list-group-item list-group-item-action" 
               data-bs-toggle="modal" 
               data-bs-target="#videoModal" 
-              data-video="">
+              data-video="https://drive.google.com/file/d/1soCzaWX_cmjvkL0GnnK0DoLTLwvKpdmx/view?usp=drive_link">
         <strong>Clase 05:</strong> Desnudando el concepto de cuerpo<br>
         <small>📅 14 de Agosto 2025 – 🎓 María Paulina Rubio</small>
       </button>
