--- a/index.html
+++ b/index.html
@@ -178,6 +178,15 @@
         <small>📅 14 de Agosto 2025 – 🎓 María Paulina Rubio</small>
       </button>
             <br />
+	      <!-- Clase 6 -->
+      <button type="button" class="list-group-item list-group-item-action" 
+              data-bs-toggle="modal" 
+              data-bs-target="#videoModal" 
+              data-video="">
+        <strong>Clase 06:</strong> Meditación<br>
+        <small>📅 28 de Agosto 2025 – 🎓 María Paulina Rubio</small>
+      </button>
+            <br />
     </div>
   </section>
 
@@ -282,6 +291,35 @@
 			</audio>
 	    </div>
     </div>
+		<br />
+    <!-- Audio 3 -->
+   <div class="list-group-item">
+		<div class="audiotitulo">
+		  <strong>Conciencia corporal 02</strong><br>
+		  <small>🎧 Voz: María Paulina Rubio</small>
+		</div>
+		<div class="player">
+			<audio controls class="mt-2 w-100">
+			<source src="audios/conciencia-02.mp3" type="audio/mp3" />
+			Tu navegador no soporta audio embebido.
+			</audio>
+	    </div>
+    </div>
+		<br />
+    <!-- Audio 4 -->
+   <div class="list-group-item">
+		<div class="audiotitulo">
+		  <strong>Atención plena 02</strong><br>
+		  <small>🎧 Voz: María Paulina Rubio</small>
+		</div>
+		<div class="player">
+			<audio controls class="mt-2 w-100">
+			<source src="audios/atencion-02.mp3" type="audio/mp3" />
+			Tu navegador no soporta audio embebido.
+			</audio>
+	    </div>
+    </div>
+	
     <!-- Más audios (ejemplo) -->
     <!--
 	<div class="list-group-item">
