--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <button type="button" class="list-group-item list-group-item-action" 
               data-bs-toggle="modal" 
               data-bs-target="#videoModal" 
-              data-video="">
+              data-video="https://drive.google.com/file/d/1Y3iCENcmYzOBLM0UBMwKypGjTdBhsUTv/preview">
         <strong>Clase 06:</strong> Meditación<br>
         <small>📅 28 de Agosto 2025 – 🎓 María Paulina Rubio</small>
       </button>
@@ -371,4 +371,5 @@
     });
   </script>
 </body>
+														  </html>
 </html>
