--- a/index.html
+++ b/index.html
@@ -187,6 +187,20 @@
         <small>📅 28 de Agosto 2025 – 🎓 María Paulina Rubio</small>
       </button>
             <br />
+				      <!-- Clase 6 -->
+      <button type="button" class="list-group-item list-group-item-action" 
+              data-bs-toggle="modal" 
+              data-bs-target="#videoModal" 
+              data-video="https://drive.google.com/file/d/1guK47KrEMuzmSVNSvFbXB3LvZamtvS0D/preview">
+        <strong>Clase 07</strong> Matrices perinatales de Grof<br>
+        <small>📅 11 de Septiembre 2025 – 🎓 Rafael</small>
+      </button>
+            <br />
+			
+			
+			
+			
+			
     </div>
   </section>
 
