--- a/index.html
+++ b/index.html
@@ -197,6 +197,19 @@
       </button>
             <br />
 			
+				      <!-- Clase 6 -->
+      <button type="button" class="list-group-item list-group-item-action" 
+              data-bs-toggle="modal" 
+              data-bs-target="#videoModal" 
+              data-video="https://drive.google.com/file/d/1H9BW2pw885wUb_oG8gW7NRBx6AFY1jHH/preview">
+        <strong>Clase 07</strong> Ciclo de la Neurosis<br>
+        <small>📅 25 de Septiembre 2025 – 🎓 Nicolas Velazquez</small>
+      </button>
+            <br />			
+			
+			
+			
+			
 			
 			
 			
@@ -334,6 +347,34 @@
 	    </div>
     </div>
 	
+		<br />
+    <!-- Audio 5 -->
+   <div class="list-group-item">
+		<div class="audiotitulo">
+		  <strong>Conciencia corporal 03</strong><br>
+		  <small>🎧 Voz: María Paulina Rubio</small>
+		</div>
+		<div class="player">
+			<audio controls class="mt-2 w-100">
+			<source src="audios/conciencia-03.mp3" type="audio/mp3" />
+			Tu navegador no soporta audio embebido.
+			</audio>
+	    </div>
+    </div>
+		<br />
+    <!-- Audio 6 -->
+   <div class="list-group-item">
+		<div class="audiotitulo">
+		  <strong>Atención plena 03</strong><br>
+		  <small>🎧 Voz: María Paulina Rubio</small>
+		</div>
+		<div class="player">
+			<audio controls class="mt-2 w-100">
+			<source src="audios/atencion-03.mp3" type="audio/mp3" />
+			Tu navegador no soporta audio embebido.
+			</audio>
+	    </div>
+    </div
     <!-- Más audios (ejemplo) -->
     <!--
 	<div class="list-group-item">
